# pathfinder

./: .gitignore  README.md  references.txt
project/project/: .project  audio_processing.c  main.c  makefile  pi_regulator.c  pi_regulator.h  process_image.c  process_image.h  project.launch
robotics_project/Mouvement/: .cproject  .gitignore  .project  Bezier.c  Bezier.h  communications.c  communications.h  listen.c  listen.h  main.c  main.h  makefile  move.c  move.h  obstacle.c  obstacle.h  odometrie.c  odometrie.h  process_image.c  process_image.h
robotics_project/python_interface/: EPuck2.py  Movemaker.py  bezier_test.py  communication.py  environment_map.py  instructions.txt  main.py  move.py  old_environment_map.py  open_loop.py  plot_image.py  test.py  test_image.py  test_instructions.txt  test_map_construction.py  test_rgb565_conversion.py  test_robot_simulator.py
robotics_project/python_scripts/: CamView.py  plotImage.py  plotImage2D.py
robotics_project/robotics_project/: .project  communications.c  communications.h  listen.c  listen.h  main.c  main.h  makefile  move.c  move.h  obstacle.c  obstacle.h  odometrie.c  odometrie.h  process_image.c  robotics_project.launch
robotics_project/slam/: environment_map.py  open_loop.py  opencv_test.py  pathfinding.py  pathfinding_test.py
src/robotics_project/: main.c  main.h  process_image.c
src/robotics_project/.dep/: ext.o.d  (+64 more)
utils/: capture.txt  capture_to_image.cpp
utils/capture_to_image/: .gitignore  CMakeLists.txt  capture.txt  capture_to_image.cpp  lodepng.cpp  lodepng.h
utils/plot_image/: plot_image.py
(+100 files in other folders)
